Add code to upgrade cluster state on start-up by removing the `ecs` parameter on `user-agent` ingest processors.